Resolved the skip link contrast issues to meet requirements
- Update client/scss/components/_skiplink.scss
- fixes #9515

--- a/client/scss/components/_skiplink.scss
+++ b/client/scss/components/_skiplink.scss
@@ -10,7 +10,7 @@
   }
 
   &.button {
-    background: theme('colors.positive.100');
-    border: theme('colors.positive.100');
+    background: theme('colors.secondary.DEFAULT');
+    border: theme('colors.secondary.DEFAULT');
   }
 }
